Fix image on small screen

--- a/_sass/home.sass
+++ b/_sass/home.sass
@@ -1266,7 +1266,15 @@ footer
           .item
             .slide-text
               .slide-header
-                font-size: 44px
+                font-size: 48px
+              .slide-image
+                max-width: 25%
+                min-width: 0
+              .slide-description
+                margin-top: 15px
+                margin-bottom: 0
+                font-size: 14px
+                line-height: 24px
 
   #project
     #project-container-fluid
